# layer

./: .gitignore  .gitmodules  README.md  chip.bit  chip.ltx  main.py  pyproject.toml  todo.md
.github/workflows/: ci.yml
arduino/esp32_slave/: esp32_slave.ino
arduino/mrfc522_rats/: mrfc522_rats.ino
arduino/mrfc522_rats_simplified/: platformio.ini  serial_log.txt
arduino/mrfc522_rats_simplified/local_linux/: byte_log_successfull_transaction2.txt  main  main_local.cpp
arduino/mrfc522_rats_simplified/src/: main.cpp
docs/: pinout.md
docs/diagrams/Auth/: auth.puml  auth_aes_handler.puml  auth_challenge.puml  auth_random.puml  auth_verify_id.puml
docs/diagrams/SPI/: clock_divider.puml  eeprom_ctrl.puml  eeprom_spi.puml  mfrc_reg_if.puml  mfrc_top.puml  mfrc_top_simplified.puml  spi_arb.puml  spi_ctrl.puml  spi_master.puml  spi_top.puml
eeprom_helpers/: at25010b_debug.py  flash_at25010b_once.py
fpga/: Makefile  README.md  arty.xdc  requirements.txt  top.v
fpga/osci_dumps/: mh_version_non_working.CSV  version_fix_felix.CSV
fpga/solution_bitstream/: arty.xdc  ocdcpro_arty.bit
fpga/spi_slave/: spi_slave.ino
fpga/spi_slave/spi_ctrl_top_slave/: spi_ctrl_top_slave.ino
fpga/spi_slave/spi_echo_top_slave/: spi_echo_top_slave.ino
fpga/spi_slave/spi_top_slave/: spi_top_slave.ino
fpga/tests/: spi.py  test.ipynb
gds/: hmteam1.txt
layr/: .gitignore  README.md
layr/layr/: README.md  wavedrom.json
layr/layr/Auth/: README.md  config.yaml
layr/top-image/: Makefile
test/: mfrc522_local.py  mfrc522_simplified.py
vivado/: vivado.xpr
(+140 files in other folders)
