[project]
name = "layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cocotb>=2.0.1",
    "cocotbext-spi",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
norecursedirs = ["build", "dist", "librelane", "pdk"]

[tool.uv.sources]
cocotbext-spi = { git = "https://github.com/schang412/cocotbext-spi.git" }
